# vsomeip_for_pad

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  notify-sample.cpp
examples/hello_world/: CMakeLists.txt  Message.hpp  test_client.hpp  test_client_main.cpp  test_event_service.cpp  test_service.hpp  test_service_main.cpp
examples/hello_world_yuanshi/: hello_world_service.hpp
examples/test_event10/: CMakeLists.txt  Message.hpp  test_event_client.cpp  test_event_service.cpp
examples/test_sc1/: CMakeLists.txt  Message.hpp  event_service.cpp  test_client.hpp  test_client_main.cpp  test_service.hpp  test_service_main.cpp
examples/test_vsomeip_nlh/: CMakeLists.txt  Client.cpp  Client.h  Common.h  Server.cpp  Server.h  client_example.cpp  client_example_sn.cpp  csdn_example.cpp  native-lib.cpp  request_example.cpp  service_example.cpp  service_example_sn.cpp  test_vsomeip.cpp  vsomeip_client.json  vsomeip_service.json
examples/test_vsomeip_nlh/hello_world/: hello_world_client.hpp  hello_world_service.hpp
test/application_tests/: application_test.json  application_test_daemon.json  application_test_no_dispatch_threads.json  application_test_no_dispatch_threads_daemon.json
test/big_payload_tests/: big_payload_test_tcp_client.json  big_payload_test_tcp_client_limited_general.json  big_payload_test_tcp_client_queue_limited_general.json  big_payload_test_tcp_client_queue_limited_specific.json  big_payload_test_tcp_client_random.json  big_payload_test_tcp_service.json  big_payload_test_tcp_service_limited_general.json  big_payload_test_tcp_service_queue_limited_general.json  big_payload_test_tcp_service_queue_limited_specific.json  big_payload_test_tcp_service_random.json
test/client_id_tests/: client_id_test_diff_client_ids_diff_ports_master.json  client_id_test_diff_client_ids_diff_ports_slave.json  client_id_test_diff_client_ids_partial_same_ports_master.json  client_id_test_diff_client_ids_partial_same_ports_slave.json  client_id_test_diff_client_ids_same_ports_slave.json  client_id_test_same_client_ids_diff_ports_slave.json  client_id_test_same_client_ids_same_ports_master.json  client_id_test_same_client_ids_same_ports_slave.json
test/cpu_load_tests/: cpu_load_test_client_master.json  cpu_load_test_service_master.json
test/e2e_tests/: e2e_test_client_external.json  e2e_test_service_external.json
test/event_tests/: event_test_master.json  event_test_slave_tcp.json  event_test_slave_udp.json
test/initial_event_tests/: initial_event_test_diff_client_ids_diff_ports_master_tcp.json  initial_event_test_diff_client_ids_diff_ports_same_service_id_master.json  initial_event_test_diff_client_ids_diff_ports_same_service_id_slave.json  initial_event_test_diff_client_ids_diff_ports_slave.json  initial_event_test_diff_client_ids_diff_ports_slave_tcp.json  initial_event_test_diff_client_ids_partial_same_ports_master.json  initial_event_test_diff_client_ids_partial_same_ports_slave.json  initial_event_test_diff_client_ids_same_ports_master.json  initial_event_test_diff_client_ids_same_ports_master_tcp.json  initial_event_test_diff_client_ids_same_ports_slave.json  initial_event_test_diff_client_ids_same_ports_slave_tcp.json  initial_event_test_same_client_ids_diff_ports_master.json  initial_event_test_same_client_ids_diff_ports_slave.json  (+1 more)
(+46 files in other folders)
